java replaced httpclient with HttpURLConnection